# pantr-cdc2023-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyrightconfig.json
alpaqa_mpc_benchmarks/: __init__.py
alpaqa_mpc_benchmarks/formulations/: ocp.py  ss.py
benchmarks/: CMakeLists.txt  alm-driver.cpp  benchmark_util.py  casadi-dll-wrapper.cpp  casadi-dll-wrapper.hpp  compare-casadi-ipopt.py  driver.cpp  ipopt-driver.cpp  ipopt-params.cpp  lbfgsb-params.cpp  lbfgspp-params.cpp  mpc-driver.cpp  new-driver.cpp  ocp-mpc-driver.cpp  params.cpp  params.hpp  params.tpp  perfplot.py  results.hpp  run-ipopt.sh  run-mpc-tol-1e-3.sh  run-mpc.sh  run-ocp-mpc-tol-1e-3.sh  run.sh  visualize.py  visualize_solution.py
benchmarks-paper/: Makefile  benchmark_util.py  compare_open.py  perfplot-cold-warm.py  perfplot.py  requirements.txt  run-mpc-exp.sh  visualize_mpc_solution.py  visualize_solution.py
benchmarks/paper/: Makefile  benchmark_util.py  compare_open.py  run-mpc-exp.sh  run-ocp-mpc-exp.sh  visualize_solution.py
benchmarks/problems/: ad.cpp  ad.py  config.hpp  formulation.hpp  hanging_chain.cpp  hermans_bicycle.cpp  lasso.cpp  quadcopter.cpp  sp-log-regr.cpp
benchmarks/util/: generate_problem.py
drivers/: CMakeLists.txt  casadi-dll-wrapper.cpp  casadi-dll-wrapper.hpp  lbfgsb-alm.cpp  lbfgsb-alm.hpp  mpc-driver.cpp  results.hpp
new-benchmarks-paper/: benchmark_util.py  dodo.py  perfplot-cold-warm.py  perfplot.py  run-single-mpc-exp.sh
problems/: CMakeLists.txt  generate_problem.py  problem-config.hpp
problems/problems/: formulation.hpp  hanging_chain.cpp  lasso.cpp  quadcopter.cpp  realistic_quadcopter.cpp  sp-log-regr.cpp
python/: pyproject.toml
python/alpaqa_mpc_benchmarks/formulations/: ms.py  ss.py
python/alpaqa_mpc_benchmarks/problems/: __init__.py  hanging_chain.py  hermans_bicycle.py  integrator.py  quadcopter.py  realistic_quadcopter.py
python/test/: test_ocproblem.py
scripts/: build-benchmarks.sh  convert-images.sh  get-dependencies.sh
