[build-system]
requires = ["py-build-cmake~=0.1.1"]
build-backend = "py_build_cmake.build"

[project]
name = "alpaqa-mpc-benchmarks"
readme = "README.md"
requires-python = ">=3.9"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["alpaqa"]
classifiers = []
dependencies = ["numpy", "casadi"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["pytest~=7.2.0"]

[project.urls]
Source = "https://github.com/tttapa/alpaqa-mpc-benchmarks"
Documentation = "https://tttapa.github.io/alpaqa-mpc-benchmarks"
Tracker = "https://github.com/tttapa/alpaqa-mpc-benchmarks/issues"

[tool.py-build-cmake.module]
name = "alpaqa_mpc_benchmarks"

[tool.pytest.ini_options]
testpaths = ["test"]
